# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "TTLRetro"
description = "package description."
version = '1.8.0'
readme = "README.md"
requires-python = ">=3.8.15"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "david.kreutter@unibe.ch", name = "David Kreutter" },
    { email = "guillaume.godin@gmail.com", name = "Guillaume Godin" },
]
#dynamic = ["version"]
dependencies = [
    "numpy==1.24.4", 
    "pandas==1.1.5", 
    "rdkit==2022.3.3", 
    "opennmt-py@git+https://github.com/thegodone/OpenNMT-py#777c19caad863ce7ecc5f0f47842d1cd4ab58636", 
    "scscore@git+https://github.com/thegodone/scscore#egg=3e535d69a7f146292cf3e506281e37eb9fae8c50", 
    ]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[project.scripts]
retrosynthesis = "ttlretro.run_multistep_retrosynthesis:main"

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
test = ["pytest>=6.0"]

[project.urls]
homepage = "https://github.com/thegodone/MultiStepRetrosynthesisTTL"
repository = "https://github.com/thegodone/MultiStepRetrosynthesisTTL"
